k8s/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: djangoapp
  labels:
    monitoring: prometheus
    istio-injection: enabled
