k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-delpoyment-v1
  namespace: djangoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: v1
  template:
    metadata:
      labels:
        app: django-app
        version: v1
        istio: monitor
    spec:
      containers:
        - name: django-app
          image: pmmig/photo-djang
          ports:
            - name: http
              containerPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-delpoyment-v2
  namespace: djangoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
      version: v2
  template:
    metadata:
      labels:
        app: django-app
        version: v2
        istio: monitor
    spec:
      containers:
        - name: django-app
          image: pmmig/photo-djang
          ports:
            - name: http
              containerPort: 8000
