k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app
  namespace: djangoapp
  labels:
    app: django-app
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: django-app
